BUG#41136: ORDER BY+range access: EXPLAIN shows "Using MRR" while MRR is actually not used